--- a/Ejercicio10/style.css
+++ b/Ejercicio10/style.css
@@ -9,18 +9,22 @@ body {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     background-color: #ffffff62;
     border: 1px solid gray;
-    border-radius: 15px;
+    border-radius:30px;
     padding-bottom: 15px;
 }
 
 .titulo {
     margin-left: 130px;
+    
 }
 
 h1, h2 {
     color: #39bd44;
 }
-
+h2{
+    
+    border-bottom: 2px solid rgb(183, 189, 183);
+}
 h3, span {
     color: rgb(224, 146, 93);
 }
@@ -31,6 +35,7 @@ h3, span {
     flex-direction: row;
     justify-content: center;
     gap: 15px;
+    
 }
 
 .menu {
@@ -40,7 +45,8 @@ h3, span {
 }
 
 li {
-    background-color: #39bd44;
+    background: rgb(28, 70, 24);
+    background: linear-gradient(0deg, rgba(154, 209, 26, 0.835) 23%, rgb(157, 212, 140) 55%, rgba(255, 255, 255, 1) 88%);
     list-style: none;
     margin-bottom: 8px;
     margin-left: 20px;
@@ -53,17 +59,41 @@ li {
 
 section {
     border: 1px rgb(228, 224, 224) solid;
-    background: linear-gradient(180deg, rgba(240, 233, 233, 0.877) 1%, rgba(223, 223, 221, 0.6225840678068102) 4%, rgb(241, 241, 236) 96%, rgb(216, 208, 208) 99%);
+    background: linear-gradient(180deg, #d3d3cfe0 1%, rgba(223, 223, 221, 0.6225840678068102) 4%, rgb(218, 218, 212) 96%, rgba(201, 199, 199, 0.966) 99%);
     text-align: justify;
     margin-right: 15px;
     padding: 12px;
 }
 
 .color1 {
-    background-color: brown;
+    background: rgb(105, 71, 4);
+    background: linear-gradient(0deg, rgba(240, 198, 115, 0.835) 23%, rgb(236, 229, 199) 55%, rgba(255, 255, 255, 1) 88%);
+    
 }
 
 a {
     text-decoration: none;
 }
 
+footer {
+    display: flex;
+    justify-content: center;
+    
+}
+.img{
+    display: flex;
+    justify-content: center;
+}
+img {
+    margin-top: 10px;
+    width: 700px;
+    height: 180px;
+    
+}
+footer>span{
+    font-size: 13px;
+    padding-top: 10px;
+    color: rgb(199, 195, 195) ;
+  
+ 
+}
